[hue] wip
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>